<resources>
    <string name="app_name">Zaika</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="title_activity_birthday">birthday</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="login" />
    <string name="user_name">User Name</string>
    <string name="Login">Login</string>
    <string name="password">password</string>
    <string name="Password">Password</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="sign_in">Sign In</string>
    <string name="username">Username</string>
    <string name="password1">Password</string>
    <string name="name">name</string>
    <string name="phone_no">Phone No</string>
    <string name="message">Message</string>
    <string name="email">Email</string>
    <string name="name1">Name</string>
    <string name="submit">Submit</string>
    <string name="login1">LOGIN</string>
    <string name="contact_us">CONTACT US</string>
    <string name="zaika_manager1">Zaika Manager1</string>
    <string name="_8857992585">8857992585</string>
    <string name="call">call</string>
    <string name="zaika_manager2">Zaika Manager2</string>
    <string name="_7218642797">7218642797</string>
    <string name="email_address">Email Address :</string>
    <string name="date">date</string>
    <string name="date1">Date</string>
    <string name="book_a_table">BOOK A TABLE</string>
    <string name="_1_please_fill_your_booking_details">1.Please fill your booking details</string>
    <string name="no_of_guests">No of guests</string>
    <string name="time">Time</string>
    <string name="_2_please_fill_the_guest_details">2.Please fill the guest details</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email3">email</string>
    <string name="phone_no3">phone_no</string>
    <string name="additional_requests">Additional Requests</string>
    <string name="send_booking_request">Send Booking Request</string>
    <string name="title_activity_home">Home</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_manager">Manager</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
