<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.jarvis.pro10.LoginActivity"

    android:background="@drawable/backj"

    >

    <!-- Login progress -->
    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:background="@android:color/transparent"
                android:fontFamily="sans-serif-smallcaps"
                android:gravity="top|center"
                android:text="@string/book_a_table"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textColor="@color/black_overlay"
                android:textSize="36sp"
                android:textStyle="bold"
                android:typeface="sans"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.504"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.074" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/bkde"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:layout_weight="1"
                        android:paddingLeft="5dp"
                        android:paddingTop="10dp"
                        android:text="@string/_1_please_fill_your_booking_details"
                        android:textColor="@android:color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <Button
                        android:id="@+id/btdate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="PICK DATE"
                        android:textAppearance="@style/TextAppearance.AppCompat.Button"
                        android:textColor="@android:color/white"
                        android:textColorLink="?attr/colorBackgroundFloating"
                        android:background="@color/black_overlay"


                        app:layout_constraintBottom_toTopOf="@+id/btime"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.478" />

                    <EditText
                        android:id="@+id/tno"
                        android:layout_width="110dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="@string/no_of_guests"
                        android:inputType="numberDecimal"
                        android:padding="5dp" />

                    <Button
                        android:id="@+id/bttime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="PICK TIME"
                        android:textAppearance="@style/TextAppearance.AppCompat.Button"
                        android:textColor="@android:color/white"
                        android:textColorLink="?attr/colorBackgroundFloating"
                        android:background="@color/black_overlay"

                        />


                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/gtde"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:layout_weight="1"
                        android:paddingLeft="5dp"
                        android:paddingTop="10dp"
                        android:text="@string/_2_please_fill_the_guest_details"
                        android:textColor="@android:color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <EditText
                        android:id="@+id/tfirst"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="25sp"
                        android:layout_weight="0.26"
                        android:ems="10"
                        android:hint="@string/first_name"
                        android:inputType="textPersonName"
                        android:paddingTop="10dp" />

                    <EditText
                        android:id="@+id/tlast"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.26"
                        android:ems="10"
                        android:hint="@string/last_name"

                        android:inputType="textPersonName"
                        android:paddingTop="10dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:orientation="horizontal"
                    android:weightSum="1">


                    <EditText
                        android:id="@+id/tmail"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="25sp"
                        android:layout_weight="0"
                        android:ems="10"
                        android:hint="@string/email3"
                        android:inputType="textEmailAddress"
                        android:paddingTop="10dp" />

                    <EditText
                        android:id="@+id/tphone"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:ems="10"
                        android:hint="@string/phone_no3"
                        android:inputType="phone"
                        android:paddingTop="10dp" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:orientation="horizontal">

                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_weight="1"
                        android:paddingLeft="5dp"
                        android:paddingTop="10dp"
                        android:text="@string/additional_requests"
                        android:textColor="@android:color/black"
                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/ttext"
                        android:layout_width="wrap_content"
                        android:layout_height="90dp"
                        android:layout_weight="1"
                        android:ems="10"
                        android:inputType="textMultiLine" />
                </LinearLayout>

                <Button
                    android:id="@+id/tablsubmit"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:text="@string/send_booking_request"
                    android:textAppearance="@style/TextAppearance.AppCompat.Button"
                    android:textColor="@android:color/white"
                    android:textColorLink="?attr/colorBackgroundFloating"
                    android:background="@color/black_overlay"

                    />
            </LinearLayout>


        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

</LinearLayout>
